--- a/3_Snoopy.ipynb
+++ b/3_Snoopy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
     "    imgHeader = cv2.hconcat((text_image(fileName), text_image(''), text_image(ORI_IMG_FN), text_image(''), text_image(mseText)))\n",
     "    \n",
     "    # 水平組合圖片內容 = (被減圖, 減號圖, 原圖, 等號圖, 差異圖,)\n",
-    "    imgContent = cv2.hconcat((imgMinuend, MINUS_IMG, BASE_IMG, EQUAL_IMG, imgDiff))\n",
+    "    imgContent = cv2.hconcat((imgMinuend, MINUS_IMG, ORI_IMG, EQUAL_IMG, imgDiff))\n",
     "    \n",
     "    # 垂直組合圖片標頭和圖片內容\n",
     "    imgResult = cv2.vconcat((imgHeader, imgContent))\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
