--- a/3_Snoopy.ipynb
+++ b/3_Snoopy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,9 @@
     "    # 水平組合圖片標頭 = (圖檔名, 空白, 原圖檔名, 空白, MSE)\n",
     "    imgHeader = cv2.hconcat((text_image(fileName), text_image(''), text_image(ORI_IMG_FN), text_image(''), text_image(mseText)))\n",
     "    \n",
-    "    # 水平組合圖片內容 = (被減圖, 減號圖, 原圖, 等號圖, 差異圖,)\n",
-    "    imgContent = cv2.hconcat((imgMinuend, MINUS_IMG, ORI_IMG, EQUAL_IMG, imgDiff))\n",
+    "    # 水平組合圖片內容 = (被減圖, 減號圖, 原圖, 等號圖, 差異圖)\n",
+    "    # 差異圖取絕對值，可顯示相減為負值的部分\n",
+    "    imgContent = cv2.hconcat((imgMinuend, MINUS_IMG, ORI_IMG, EQUAL_IMG, abs(imgDiff)))\n",
     "    \n",
     "    # 垂直組合圖片標頭和圖片內容\n",
     "    imgResult = cv2.vconcat((imgHeader, imgContent))\n",
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
